# FoxTLS

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  search-index.js
caesar/: enum.CaesarError.html  index.html  sidebar-items.js  struct.Incoming.html  struct.TlsTcpListener.html  struct.TlsTcpStream.html  type.Result.html
caesar/tcp/: sidebar-items.js  struct.Incoming.html  struct.TlsTcpListener.html  struct.TlsTcpStream.html
caesar/types/: enum.CaesarError.html  sidebar-items.js  type.Result.html
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
src/: lib.rs  tcp.rs  types.rs
src/caesar/src/: lib.rs.html  tcp.rs.html  types.rs.html
