[package]
name = "foxtls"
description = "A lightweight non-blocking TLS wrapper for the Rust standard library TCP listener."
documentation = "https://fox4c.github.io/FoxTLS/"
repository = "https://github.com/Fox4c/FoxTLS"
readme = "README.md"
keywords = ["tls", "ssl", "tcp", "crypto", "mio", "non-blocking"]
license = "MIT"

version = "0.0.1"
authors = ["Joshua Steffensky <steffensky@fox4c.com>"]

[dependencies]
openssl = "^0.7.6"
mio = "^0.5.1"

[features]
default = ["tlsv1_2", "rfc5114"]

tlsv1_2 = ["openssl/tlsv1_2"]
rfc5114 = ["openssl/rfc5114"]
